--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -62,10 +62,10 @@
                     android:id="@+id/vp_home_banner_indicator"
                     android:layout_width="0dp"
                     android:layout_height="45dp"
-                    android:background="@drawable/selector_viewpager_indicator"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/vp_home_banner"
+                    app:tabBackground="@drawable/selector_viewpager_indicator"
                     app:tabGravity="center"
                     app:tabIndicatorHeight="0dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
