[feat] Category 데이터 불러오는 작업

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -14,7 +14,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_category"
-        android:name="com.android.shoppi.presentation.main.CategoryFragment"
+        android:name="com.android.shoppi.presentation.category.CategoryFragment"
         android:label="CategoryFragment" />
     <fragment
         android:id="@+id/navigation_cart"
