--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Image -->
+    <style name="Circle">
+        <item name="cornerSize">50%</item>
+    </style>
+
+
     <!-- Text Style -->
 
     <style name="TextHeadline5.Black02" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="android:textColor">@color/shoppi_black_02</item>
     </style>
 
-    <style name="TextHeadline5.Black02.Bold" >
+    <style name="TextHeadline5.Black02.Bold">
         <item name="android:textStyle">bold</item>
     </style>
 
