--- a/app/src/main/res/layout/item_home_banner.xml
+++ b/app/src/main/res/layout/item_home_banner.xml
@@ -20,10 +20,20 @@
             android:layout_width="312dp"
             android:layout_height="343dp"
             android:layout_marginHorizontal="16dp"
+            android:background="@drawable/shape_border_radius_12"
+            android:clipToOutline="true"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <View
+            android:id="@+id/view_gradient"
+            android:layout_width="312dp"
+            android:layout_height="202dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@drawable/background_gradient"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_banner_image"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_banner_badge"
@@ -35,6 +45,7 @@
             android:paddingHorizontal="7dp"
             android:paddingVertical="1dp"
             android:text="@{banner.badge.label}"
+            android:textAppearance="@style/TextCaption1.White"
             android:textColor="@color/shoppi_white"
             app:layout_constraintBottom_toTopOf="@+id/tv_banner_title"
             app:layout_constraintStart_toStartOf="@id/iv_banner_image"
@@ -49,6 +60,8 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
             android:text="@{banner.label}"
+            android:textAppearance="@style/TextHeadline32.White.Bold"
+            android:textSize="32sp"
             app:layout_constraintBottom_toTopOf="@+id/view_banner_product_detail"
             app:layout_constraintEnd_toEndOf="@id/iv_banner_image"
             app:layout_constraintStart_toStartOf="@id/iv_banner_image"
@@ -85,6 +98,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@{banner.productDetail.brandName}"
+            android:textAppearance="@style/TextSubtitle3.Bold"
             app:layout_constraintEnd_toEndOf="@id/view_banner_product_detail"
             app:layout_constraintStart_toEndOf="@+id/iv_banner_detail_thumbnail"
             app:layout_constraintTop_toTopOf="@id/view_banner_product_detail"
@@ -96,6 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:text="@{banner.productDetail.label}"
+            android:textAppearance="@style/TextCaption1.Grey03"
             app:layout_constraintEnd_toEndOf="@id/tv_banner_detail_brand_label"
             app:layout_constraintStart_toStartOf="@id/tv_banner_detail_brand_label"
             app:layout_constraintTop_toBottomOf="@+id/tv_banner_detail_brand_label"
@@ -107,6 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
             android:text="@{@string/unit_discount_rate(banner.productDetail.discountRate)}"
+            android:textAppearance="@style/TextSubtitle2.Purple.Bold"
             app:layout_constraintStart_toStartOf="@id/tv_banner_detail_product_label"
             app:layout_constraintTop_toBottomOf="@id/tv_banner_detail_product_label"
             tools:text="9%" />
@@ -118,6 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
+            android:textAppearance="@style/TextSubtitle1.Bold"
             app:layout_constraintBottom_toBottomOf="@id/tv_banner_detail_product_discount_rate"
             app:layout_constraintStart_toEndOf="@id/tv_banner_detail_product_discount_rate"
             tools:text="89,000원" />
@@ -129,6 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginBottom="1dp"
+            android:textAppearance="@style/TextCaption1.Grey05"
             app:layout_constraintBottom_toBottomOf="@id/tv_banner_detail_product_discount_price"
             app:layout_constraintStart_toEndOf="@id/tv_banner_detail_product_discount_price"
             tools:text="100,000원" />
