--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="TextHeadline32.White.Bold" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textColor">@color/shoppi_white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="TextMedium" parent="TextAppearance.AppCompat.Medium">
         <item name="android:textColor">@color/shoppi_black_01</item>
     </style>
@@ -37,6 +42,10 @@
         <item name="android:textColor">@color/shoppi_black_01</item>
     </style>
 
+    <style name="TextSubtitle1.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="TextSubtitle1.White">
         <item name="android:textColor">@color/shoppi_white</item>
     </style>
@@ -54,9 +63,21 @@
         <item name="android:textColor">@color/shoppi_grey_05</item>
     </style>
 
+    <style name="TextSubtitle2.Purple">
+        <item name="android:textColor">@color/shoppi_purple</item>
+    </style>
+
+    <style name="TextSubtitle2.Purple.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="TextSubtitle3">
         <item name="android:textSize">13sp</item>
         <item name="android:textColor">@color/shoppi_black_01</item>
+    </style>
+
+    <style name="TextSubtitle3.Bold">
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="TextSubtitle3.Grey03">
@@ -68,8 +89,16 @@
         <item name="android:textColor">@color/shoppi_black_01</item>
     </style>
 
-    <style name="TextCaption1.Grey03" parent="TextAppearance.AppCompat.Caption">
+    <style name="TextCaption1.Grey03">
         <item name="android:textColor">@color/shoppi_grey_03</item>
+    </style>
+
+    <style name="TextCaption1.Grey05">
+        <item name="android:textColor">@color/shoppi_grey_05</item>
+    </style>
+
+    <style name="TextCaption1.White" parent="TextAppearance.AppCompat.Caption">
+        <item name="android:textColor">@color/shoppi_white</item>
     </style>
 
     <style name="TextCaption2" parent="TextAppearance.AppCompat.Caption">
