--- a/app/src/main/res/layout/item_home_banner.xml
+++ b/app/src/main/res/layout/item_home_banner.xml
@@ -85,6 +85,8 @@
             android:layout_height="50dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
+            android:background="@drawable/shape_border_radius_8"
+            android:clipToOutline="true"
             app:layout_constraintStart_toStartOf="@+id/view_banner_product_detail"
             app:layout_constraintTop_toTopOf="@+id/view_banner_product_detail" />
 
