--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -36,6 +36,8 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginHorizontal="16dp"
+                    android:background="@drawable/shape_border_radius_12"
+                    android:clipToOutline="true"
                     android:contentDescription="@string/description_product_detail_thumbnail"
                     android:src="@drawable/img_pdp_top_01"
                     app:layout_constraintDimensionRatio="1"
@@ -135,6 +137,13 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_product_detail_image_title" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="12dp">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
