--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -30,7 +30,7 @@
         tools:layout="@layout/fragment_cart"/>
     <fragment
         android:id="@+id/navigation_product_detail"
-        android:name="com.android.shoppi.presentation.main.ProductDetailFragment"
+        android:name="com.android.shoppi.presentation.productDetail.ProductDetailFragment"
         android:label="ProductDetailFragment"
         tools:layout="@layout/fragment_product_detail"/>
     <fragment
