--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -25,7 +25,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_cart"
-        android:name="com.android.shoppi.presentation.main.CartFragment"
+        android:name="com.android.shoppi.presentation.cart.CartFragment"
         android:label="CartFragment"
         tools:layout="@layout/fragment_cart"/>
     <fragment
