--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -93,7 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:text="@{item.amount}"
+                android:text="@{String.valueOf(item.amount)}"
                 app:layout_constraintBottom_toBottomOf="@+id/btn_cart_item_minus"
                 app:layout_constraintStart_toEndOf="@+id/btn_cart_item_minus"
                 app:layout_constraintTop_toTopOf="@+id/btn_cart_item_minus"
